﻿The QA40xPlot Changelog
--------------------------------------------
This changelog shows the changes made for each version
--------------------------------------------
v 1.2.7 asdfasdf
- improve menu position and other esthetics

v 1.2.6 1/24/26
- add a QA40x readme on ports
- read the dc supply voltage, dc current, and temperature on device init
- put them all upper-right updating on each measurement
- have scope use bin-center frequencies
- add ability to edit Gotten plot name
- add a default data folder setting
- finally fix phase upwrapping
- add early group delay display
- try out second Y axis for group delay
- rewrite/repair averaging for Frequency Response tests
- update frequency response messaging
- add Shift-Click to on/off a group of legend labels
- switch to Release x64 instead of Release Any ?
v 1.2.5 1/18/2026
- add space to run/start/get... buttons
- update mouse cursor in frequency response test when test runs
- add WhatsNew file to the delivery
- add a Residual display option to the Scope test
- don't allow page switching during a run
- improve scope Fit and PinToRange to support 5 digit (smaller) values
- add options to scope Residual Plot (1.2.5.4)
v 1.2.4 1/13/2026
- fixup selection of Transparent in color picker
- improve gain curve frequency selection
- add F6,F7 accelerators for start/stop
- swap Start to Run for spectrum, imd, and scope tests
- support untethered serializable UOM
- improve generator voltage messaging
- add a continuous run button to the Response/Gain/Crosstalk/Impedance tests
- upgrade esthetics of voltage unit button
- add Whats New file and button
v 1.2.3 1/4/2026
- add dates to changelog v tags
- nearly finish implementing thd vs amplitude update
- replace THD vs Amplitude test with new one with multi-frequency support
- support dual generator even with wave file in scope test
- make the miniplots movable
- use ZIP compression instead of Gzip for saved tests